# rekordport

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  rekordbox_lossless_scan.py  vite.config.js
.codex-output/test-audio/wav-fixtures-2026-04-20/: README.txt  manifest.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: windows-build.yml
release/: README.md  SHA256SUMS-0.2.2-2026-04-20.txt  SHA256SUMS-0.2.3-2026-04-20.txt  SHA256SUMS-2026-04-13.txt  SHA256SUMS-universal-0.2.3-2026-04-22.txt
release/rekordport.app/Contents/: Info.plist
release/rekordport.app/Contents/MacOS/: sqlcipher
src/: api.js  app-state.js  convert-flow.js  events.js  main.js  preview-player.js  render-results.js  scan-flow.js  settings.js  style.css  updates.js  utils.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  conversion.rs  conversion_session.rs  fs_ops.rs  lib.rs  locks.rs  main.rs  migration.rs  migration_fixture_tests.rs  models.rs  platform.rs  preview.rs  process.rs  rekordbox.rs  tests.rs  tools.rs
src/styles/: base.css  dialogs.css  forms.css  layout.css  player.css  responsive.css  table.css
tools/: build-macos13-arm64-sidecars.sh  fetch-windows-sidecars.ps1  make_handdrawn_icon.py  make_handdrawn_icon_v2_flat.py  make_scanned_icon_flat.py  prepare-frontend-assets.mjs  prepare-tauri-config.mjs  run-tauri.mjs
(+1 files in other folders)
