[package]
name = "rekordport"
version = "0.1.0"
description = "rekordport desktop app"
authors = ["chuanpeng"]
edition = "2021"

[lib]
name = "rekordport_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
csv = "1.3"
md5 = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
rfd = "0.15"
tempfile = "3"
trash = "5"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
